# AK-Projekt

./: CMakeLists.txt  README.md  makefile
docs/: cmake_instructions  schemat.txt
docs/report/: ak2_projekt.tex
src/: CMakeLists.txt  main.c
src/coms/: alice.c  bob.c  message.c  message.h  util.h
src/cryptography/: base64.h  base64.s  dhexchange.h  dhexchange.s  print.h  print.s  tea.h  tea.s
test/: CMakeLists.txt  test.cpp
